App library fixes (#1053)
* Remove Revealer from globalprogressbar

It already has its own reveal animation. Also fixes uneven padding for the button around the GlobalProgressBar

* Add a launch button to transaction tile

* Improve Separators

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -268,6 +268,10 @@ global-progress image {
   color: var(--window-fg-color);
 }
 
+.global-progress-button {
+	padding: 5px;
+}
+
 .lozenge {
 	  font-size: 18px;
 	  font-weight: bold;
@@ -837,6 +841,12 @@ window.narrow .category-tile {
 .update-card {
   border-radius: 12px;
 	box-shadow: 0 0 0 1px rgba(0,0,6,0.03), 0 1px 3px 1px rgba(0,0,6,0.07), 0 2px 6px 2px rgba(0,0,6,0.03);
+}
+
+@media (prefers-color-scheme: dark) {
+  separator {
+	  opacity: 0.5;
+  }
 }
 
 .disable-adw-flow-box-styling {
